--- a/index.html
+++ b/index.html
@@ -15,28 +15,34 @@
         <div class="innerContainer headerContainer">
             <h4 class="logo"><a>HauteHats</h4></a>
             <ul class="headerMenu">
-                <li class="headerlinks paddingRight"><a href="#about-us">About Us</a></li>
-                <li class="headerlinks paddingRight"><a href="#">Contact</a></li>
-                <li class="headerlinks"><a href="#products">Shop</a></li>
+                <li class="headerLinks paddingRight"><a href="#about-us">About Us</a></li>
+                <li class="headerLinks paddingRight"><a href="#">Contact</a></li>
+                <li class="headerLinks"><a href="#products">Shop</a></li>
             </ul>
             <ul class="headerMenu">
-                <li class="headerSocials"><a href="#"></a><i class="fa-brands fa-pinterest-p icon"></i></a></li>
+                <li class="headerSocials"><a href="#"><i class="fa-brands fa-pinterest-p purple icon"></i></a></li>
                 <li class="headerSocials"><a href="#"><i class="fa-brands fa-instagram purple icon"></i></a></li>
                 <li class="headerSocials cart"><a href="#"><i class="fa-solid fa-bag-shopping white icon"></i></a></li>
+                <i class="fa-solid fa-bars" id="menuIcon"></i>
             </ul>
         </div>
     </header>
     <div >
     <section>
-        <div class="twoColGrid">
+        <div class="twoColGrid hero">
             <div class="contentBox">
                 <h1>Haute Hats for every occasion</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptas sunt ratione, molestiae quis aliquam impedit porro consequatur quae asperiores tenetur facere aut, reiciendis saepe amet quidem rem quaerat voluptatum.</p>
-		        <a href="#" class="primaryCTA">View Product</a>
+		        <a href="#" class="primaryCTA">View Collection</a>
             </div>
-            <div class="imgBoxRight" id="homePageHero"></div>
+            <div class="imgBoxRight homePageHero"></div>
         </div>
-    </div>
+        <div class="mobileHero homePageHero">
+            <div class="textColumn">
+                <h1>Haute Hats for every occasion</h1>
+                <a href="#" class="primaryCTA">View Collection</a>
+            </div>
+        </div>
     </section>
     <section>
         <div class="innerContainer">
@@ -44,7 +50,7 @@
         <div class="productGrid">
             <article class="productColumn fadeIn">
                 <div class="product" id="product1"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Beatrice</h3>
                         <span class="price">$130.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -52,7 +58,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product2"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Amina</h3>
                         <span class="price">$110.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -60,7 +66,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product3"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Victoria</h3>
                         <span class="price">$650.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -68,7 +74,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product4"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Camilla</h3>
                         <span class="price">$575.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -76,7 +82,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product5"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Diana</h3>
                         <span class="price">$350.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -84,7 +90,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product6"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Elizabeth</h3>
                         <span class="price">$425.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -92,7 +98,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product7"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Catherine</h3>
                         <span class="price">$250.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
@@ -100,7 +106,7 @@
             </article>
             <article class="productColumn">
                 <div class="product" id="product8"></div>
-				    <div class="textColumn">
+				    <div class="productTextColumn">
                 	    <h3>Alice</h3>
                         <span class="price">$150.00</span>
                 	    <a href="#" class="primaryCTA">View Product</a>
