--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
     </header>
         <section>
             <div class="innerContainer productPage">
-                <div class="imageGrid">
+                <div class="productImageGrid">
                     <div class="smallProduct" id="product1"></div>
                     <div class="smallProduct" id="product1"></div>
                     <div class="productDescription">
