--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="innerContainer headerContainer">
-            <h4 class="logo"><a>HauteHats</h4></a>
+            <h4 class="logo"><a href="index.html">HauteHats</h4></a>
             <ul class="headerMenu">
                 <li class="headerLinks paddingRight"><a href="#about-us">About Us</a></li>
                 <li class="headerLinks paddingRight"><a href="#">Contact</a></li>
